Feat: when add new student, its group will auto created and saved in json